submit tweet form data with ajax

--- a/public/index.html
+++ b/public/index.html
@@ -45,11 +45,11 @@
     <!-- Page-specific (main) content here -->
     <main id="tweets-container">
       <section class="new-tweet">
-        <form class="tweet-form" method="POST" action="/tweets">
+        <form id="tweet-form" method="POST" action="/tweets">
           <!-- <label for="tweet-text">What are you humming about?</label> -->
           <textarea name="text" id="tweet-text" placeholder="What are you humming about?"></textarea>
           <div class="button-area">
-            <button class="tweet-button" type="submit">Tweet</button>
+            <button id="tweet-button" type="submit">Tweet</button>
             <output name="counter" class="counter" for="tweet-text">140</output>
           </div>
         </form>
