create post tweet function which dynamically posts tweets without refresh

--- a/public/index.html
+++ b/public/index.html
@@ -43,7 +43,7 @@
       </div>
     </header>
     <!-- Page-specific (main) content here -->
-    <main id="tweets-container">
+    <main>
       <section class="new-tweet">
         <form id="tweet-form" method="POST" action="/tweets">
           <!-- <label for="tweet-text">What are you humming about?</label> -->
@@ -54,6 +54,7 @@
           </div>
         </form>
       </section>
+      <div id="tweets-container"></div>
     </main>
   </body>
 </html>
