add compose button to nav, improve styling and tweet hover, add date function

--- a/public/index.html
+++ b/public/index.html
@@ -41,8 +41,10 @@
     <nav>
       <div>tweeter</div>
       <div class="write-new-tweet">
-        Write a new tweet
-        <i id="double-arrow" class="fas fa-angle-double-down"></i>
+        <div><b>Write</b> a new tweet</div>
+        <button class="compose" type="submit"><span>
+          <i id="double-arrow" class="fas fa-angle-double-down"></i>
+        </span></button>
       </div>
     </nav>
 
