--- a/public/index.html
+++ b/public/index.html
@@ -33,6 +33,7 @@
     <!-- App JS -->
     <script type="text/javascript" src="/scripts/client.js"></script>
     <script type="text/javascript" src="/scripts/composer-char-counter.js"></script>
+    <script type="text/javascript" src="/helpers.js"></script>
 
   </head>
 
